[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/textures/dot.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Interaction/Sell.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/ComputerModern.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.164706, 0.164706, 0.164706, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.141176, 0.141176, 0.141176, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0431373, 0.0431373, 0.0431373, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.113725, 0.113725, 0.113725, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.494118, 0.494118, 0.494118, 1 )
border_blend = true
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=1]
default_font = ExtResource( 3 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = ExtResource( 3 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
HBoxContainer/constants/separation = 64
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = ExtResource( 3 )
Label/styles/normal = null
Panel/styles/panel = SubResource( 3 )
PanelContainer/styles/panel = SubResource( 2 )
VBoxContainer/constants/separation = 15

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )

[node name="Panel" type="Panel" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -335.5
margin_right = 335.5
margin_bottom = 578.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/Panel/PanelContainer"]
margin_right = 671.0
margin_bottom = 578.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Panel/PanelContainer/ScrollContainer"]
margin_right = 671.0
margin_bottom = 576.0
alignment = 1

[node name="TopText" type="HBoxContainer" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer"]
margin_right = 671.0
margin_bottom = 23.0
alignment = 1

[node name="VALMansion" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/TopText"]
unique_name_in_owner = true
margin_left = 188.0
margin_right = 234.0
margin_bottom = 23.0
text = "$VAL"

[node name="Label" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/TopText"]
margin_left = 298.0
margin_right = 483.0
margin_bottom = 23.0
text = "Mansion Photo-OP Bill:"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 671.0
margin_bottom = 39.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="EarnLoss" type="HBoxContainer" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 671.0
margin_bottom = 305.0
alignment = 1

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss"]
margin_right = 1.0
margin_bottom = 251.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="EarnedVbox" type="VBoxContainer" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss"]
margin_left = 65.0
margin_right = 271.0
margin_bottom = 251.0
rect_min_size = Vector2( 206, 251 )
alignment = 1

[node name="AmountEarned" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/EarnedVbox"]
margin_right = 206.0
margin_bottom = 23.0
text = "Amount Earned:"
align = 1

[node name="Label" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/EarnedVbox"]
margin_top = 38.0
margin_right = 206.0
margin_bottom = 61.0
text = "Mansion Size"
align = 1

[node name="VALRoomCom" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/EarnedVbox"]
unique_name_in_owner = true
self_modulate = Color( 0, 1, 0, 1 )
margin_top = 76.0
margin_right = 206.0
margin_bottom = 99.0
text = "$VAL"
align = 1

[node name="Label2" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/EarnedVbox"]
margin_top = 114.0
margin_right = 206.0
margin_bottom = 137.0
text = "Remaining Health (x 25):"
align = 1

[node name="VALHealth" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/EarnedVbox"]
unique_name_in_owner = true
self_modulate = Color( 0, 1, 0, 1 )
margin_top = 152.0
margin_right = 206.0
margin_bottom = 175.0
text = "$VAL"
align = 1

[node name="Label3" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/EarnedVbox"]
margin_top = 190.0
margin_right = 206.0
margin_bottom = 213.0
text = "Image Value (x 15):"
align = 1

[node name="VALImage" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/EarnedVbox"]
unique_name_in_owner = true
self_modulate = Color( 0, 1, 0, 1 )
margin_top = 228.0
margin_right = 206.0
margin_bottom = 251.0
text = "$VAL"
align = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss"]
margin_left = 335.0
margin_right = 336.0
margin_bottom = 251.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="LostVbox" type="VBoxContainer" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss"]
margin_left = 400.0
margin_right = 606.0
margin_bottom = 251.0
rect_min_size = Vector2( 206, 251 )
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/LostVbox"]
margin_right = 206.0
margin_bottom = 23.0
text = "Amount Lost:"
align = 1

[node name="Label2" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/LostVbox"]
margin_top = 38.0
margin_right = 206.0
margin_bottom = 61.0
text = "Film Expended (x 10):"
align = 1

[node name="VALFilmLoss" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/LostVbox"]
unique_name_in_owner = true
margin_top = 76.0
margin_right = 206.0
margin_bottom = 99.0
text = "$VAL"
align = 1

[node name="Label3" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/LostVbox"]
margin_top = 114.0
margin_right = 206.0
margin_bottom = 137.0
text = "Knocked Out: (x10):"
align = 1

[node name="VALKnock" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/LostVbox"]
margin_top = 152.0
margin_right = 206.0
margin_bottom = 175.0
text = "$VAL"
align = 1

[node name="Label4" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/LostVbox"]
margin_top = 190.0
margin_right = 206.0
margin_bottom = 213.0
text = "Ruined Film ( x15):"
align = 1

[node name="VALWasted" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss/LostVbox"]
unique_name_in_owner = true
self_modulate = Color( 1, 0, 0, 1 )
margin_top = 228.0
margin_right = 206.0
margin_bottom = 251.0
text = "$VAL"
align = 1

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/EarnLoss"]
margin_left = 670.0
margin_right = 671.0
margin_bottom = 251.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 671.0
margin_bottom = 321.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="TotalLossEarn" type="VBoxContainer" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 336.0
margin_right = 671.0
margin_bottom = 359.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/TotalLossEarn"]
margin_right = 671.0
margin_bottom = 23.0
alignment = 1

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/TotalLossEarn/HBoxContainer"]
margin_left = 99.0
margin_right = 100.0
margin_bottom = 23.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="Label" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/TotalLossEarn/HBoxContainer"]
margin_left = 164.0
margin_right = 271.0
margin_bottom = 23.0
rect_min_size = Vector2( 107, 23 )
text = "Total Earned:"
align = 1

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/TotalLossEarn/HBoxContainer"]
margin_left = 335.0
margin_right = 336.0
margin_bottom = 23.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="Label2" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/TotalLossEarn/HBoxContainer"]
margin_left = 400.0
margin_right = 507.0
margin_bottom = 23.0
rect_min_size = Vector2( 107, 23 )
text = "Total Lost:"
align = 1

[node name="TextureRect4" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/TotalLossEarn/HBoxContainer"]
margin_left = 571.0
margin_right = 572.0
margin_bottom = 23.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="TextureRect4" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 374.0
margin_right = 671.0
margin_bottom = 375.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="GrandTotal" type="VBoxContainer" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 671.0
margin_bottom = 467.0
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/GrandTotal"]
margin_right = 671.0
margin_bottom = 23.0
text = "Grand Total:"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/GrandTotal"]
margin_top = 38.0
margin_right = 671.0
margin_bottom = 39.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/GrandTotal/HBoxContainer"]
margin_left = 215.0
margin_right = 455.0
margin_bottom = 1.0
rect_min_size = Vector2( 240, 1 )
texture = ExtResource( 1 )
stretch_mode = 1

[node name="TOTALVAL" type="Label" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/GrandTotal"]
margin_top = 54.0
margin_right = 671.0
margin_bottom = 77.0
text = "$VAL"
align = 1

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 482.0
margin_right = 671.0
margin_bottom = 483.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="SellButton" type="HBoxContainer" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 498.0
margin_right = 671.0
margin_bottom = 529.0
alignment = 1

[node name="Button" type="Button" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/SellButton"]
margin_left = 278.0
margin_right = 392.0
margin_bottom = 31.0
focus_mode = 0
enabled_focus_mode = 0
text = "Sell Property!"

[node name="TextureRect5" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 544.0
margin_right = 671.0
margin_bottom = 545.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="Pictures" type="ScrollContainer" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 560.0
margin_right = 671.0
margin_bottom = 560.0
scroll_vertical_enabled = false

[node name="ImageList" type="HBoxContainer" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer/Pictures"]
unique_name_in_owner = true
margin_right = 671.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect6" type="TextureRect" parent="PanelContainer/Panel/PanelContainer/ScrollContainer/VBoxContainer"]
margin_top = 575.0
margin_right = 671.0
margin_bottom = 576.0
texture = ExtResource( 1 )
stretch_mode = 1
